<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include layout="@layout/toolbar"></include>


        <EditText
            android:layout_centerInParent="true"
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bajugalilogo"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin_ten"
            android:hint="@string/enter_your_email"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ed_newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_email"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin_ten"
            android:hint="@string/enter_newPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ed_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_newPassword"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin_ten"
            android:hint="@string/enter_confirmPass"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="14sp"
            android:visibility="visible" />



        <Button
            android:id="@+id/continueBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_confirmPassword"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin_twenty"
            android:background="@drawable/button_bg_global"
            android:onClick="change"
            android:text="@string/submit"
            android:textColor="@color/colorWhite" />

</RelativeLayout>