<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:id="@+id/submitrequestDetailsToolbar"
        layout="@layout/toolbar">

    </include>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/submitRequest_CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submitrequestDetailsToolbar"
        android:layout_margin="@dimen/horizontal_margin_ten"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_below="@+id/headview"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/DateCreate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/headview"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:text="@string/amenities_name"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/headview"
                    android:text="@string/subject"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:id="@+id/headview"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/headertext"
                android:layout_marginTop="5dp"
                android:background="#7AAA" />

            <LinearLayout

                android:id="@+id/linearduedate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearamountdue">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/ticket"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ticket"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearmonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/headview"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/headview"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/description"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/submitrequestDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearamountdue">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/submit_date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/submit_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearamountdue">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/assigned_to"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/assigned_to"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearamountdue"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/contactpersonname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/resolution_comment"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/resolution_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearamountdue"
                android:visibility="gone">

                <TextView
                    android:id="@+id/contactpersonnumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@string/available_booking"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/available_booking"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearamountdue">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/status"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearamountdue">

                <TextView
                    android:id="@+id/contactpersonemail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/resolved_on"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/resolved_on"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/submitrequestLinear"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submitRequest_CardView"
        android:layout_marginTop="@dimen/vertical_margin_ten">

        <android.support.v7.widget.CardView
           android:layout_margin="@dimen/vertical_margin_ten"
            android:id="@+id/submitRequest_SpinnerCardView"
            app:cardCornerRadius="5dp"
            app:cardElevation="8dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <android.support.v7.widget.AppCompatSpinner
                android:gravity="center"
                android:id="@+id/ed_SubmitRequestSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />

        </android.support.v7.widget.CardView>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/vertical_margin_ten"
        android:orientation="horizontal">

        <Button
            android:visibility="visible"
            android:id="@+id/submitrequestDetailsEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_global"
            android:text="@string/edit"
            android:textColor="@color/colorWhite" />

        <Button
            android:visibility="visible"
            android:id="@+id/submitrequestDetailsSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_global"
            android:text="@string/save"
            android:textColor="@color/colorWhite" />

    </LinearLayout>


</RelativeLayout>
