<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_dark">

        <ImageView
            android:id="@+id/bajugalilogo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/splash_logo_height"
            android:layout_marginBottom="@dimen/vertical_margin_twenty"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:src="@drawable/bajugali_logo" />


        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bajugalilogo"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin_ten"
            android:background="@drawable/edittext_bg"
            android:hint="@string/enter_your_email"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/text_hint_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ed_newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_email"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin_ten"
            android:background="@drawable/edittext_bg"
            android:hint="@string/enter_newPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/text_hint_color"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ed_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_newPassword"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin_ten"
            android:background="@drawable/edittext_bg"
            android:hint="@string/enter_confirmPass"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/text_hint_color"
            android:textSize="14sp"
            android:visibility="visible" />
        <!-- <CheckBox
             android:visibility="visible"
             android:textColor="@color/colorWhite"
             android:text="@string/terms_condition"
             android:buttonTint="@color/text_hint_color"
             android:id="@+id/signup_checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/ed_confirmPassword"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin" />-->
        <TextView
            android:padding="10dp"
            android:id="@+id/signup_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_confirmPassword"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/terms_condition"
            android:textColor="@color/colorWhite"
            android:visibility="visible" />

        <Button
            android:id="@+id/continueBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_checkbox"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin_twenty"
            android:background="#99e7373a"
            android:onClick="change"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>
</LinearLayout>