<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

   <android.support.v7.widget.CardView
       app:cardCornerRadius="5dp"
       app:cardElevation="8dp"
       android:layout_margin="@dimen/vertical_margin_ten"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/horizontal_margin_ten"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/committee_members"
                android:textColor="@color/main_color"
                android:textStyle="bold"
                android:visibility="gone" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/iv_apartmentProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/vertical_margin_ten"
                android:scaleType="fitXY"
                android:src="@drawable/ic_profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/vertical_margin_ten"
                android:text="@string/name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/vertical_margin_ten"
                android:text="@string/designation"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp" />

        </LinearLayout>


   </android.support.v7.widget.CardView>

</LinearLayout>